<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>arena_sdk_vendor</name>
  <version>0.1.59</version>
  <description>
    Wrapper around binary distributions of Lucid ArenaSDK.
  </description>
  <maintainer email="russ.webber@greenroomrobotics.com">Russ Webber</maintainer>
  <license>MIT</license>

  <url type="website"></url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend></depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
